--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,45 @@
-.App {
-  text-align: center;
+.logo {
+    text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.icon {
+    display: flex;
+    justify-content: center;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+.image {
+    height: 100px;
+    width: 100px;
+    margin: 30px 30px 10px 30px;
   }
+
+.name {
+  color: aquamarine;
+  font-size: 10px;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+a {
+    text-decoration: none;
   }
-  to {
-    transform: rotate(360deg);
+
+  .end {
+    font: 55px;
+    color: aliceblue ;
+    margin-right: 20px;
+    margin-left: 20px;
   }
+
+  .outer-footer {
+    color: goldenrod;
+    padding-top: 30px;
+  }
+
+  .inner-footer{
+    margin-top: 50px;
+  }
+
+.footer {
+    text-align: center;
 }
+
+  
