--- a/src/App.css
+++ b/src/App.css
@@ -1,44 +1,78 @@
+.app {
+  background-image: url(./images/background.png);
+  background-size: cover;
+  background-position: center;
+  text-align : center;
+  position: absolute;
+  min-width: 100%;
+  min-height: 100%;
+}
+
+body {
+  margin : 0;
+}
+
 .logo {
-    text-align: center;
-    padding-top: 20px;
+  padding: 20px;
+  width: 60%;
+  border-bottom-color :#054979; 
+  border-bottom-style: solid;
+  border-width: 1px;
+  margin-left: auto;
+  margin-right: auto;
+  
 }
 
-.icon {
-    display: flex;
-    justify-content: center;
+.icons {
+  padding : 20px;
+  width: 60%;
+  margin-left: auto;
+  margin-right: auto;
+  display: grid;
+  grid-template-columns: repeat(3, auto);
+  border-bottom-style: solid;
+  border-bottom-color: #054979;
+  border-width: 1px;
 }
 
-.image {
-    height: 70px;
-    width: 70px;
-    margin: 30px 30px 10px 30px;
+.iconImg {
+   height: 130px;
+   width: 130px;
+   padding : 20px 20px 10px 20px;
   }
 
-.name {
-  
+.iconName {
   color: #FFFFFF;
-  font-size: 15px;
+  font-size: 18px;
+  font-weight: 600;
   text-align: center;
 }
 
   .end {
-    font-size : 10px;
-    color: aliceblue ;
+    font-size : 14px;
+    color: #1B6BA2 ;
     margin-right: 20px;
     margin-left: 20px;
   }
 
-  .outer-footer {
-    color: goldenrod;
+  .footer1 {
     padding-top: 30px;
   }
 
-  .inner-footer{
-    margin-top: 50px;
+  .footer2{
+    margin-top: 30px;
+    padding-bottom : 10px;
+    color: #49586B;
+    font-size: 14px;
   }
 
-.footer {
-    text-align: center;
+.endlogo {
+  vertical-align: middle;
+}
+
+
+a {
+  text-decoration: none;
 }
 
 h2 {
@@ -47,23 +81,3 @@ h2 {
   color :aliceblue
 }
 
-.endlogo {
-  vertical-align: middle;
-}
-
-body {
-  width: 100%;
-  height: 100%;
-  overflow: hidden;
-  margin : 0;
-}
-
-hr {
-  width: 800px;
-  size: 1px;
-  margin-top : 20px;
-}
-
-a {
-  text-decoration: none;
-}
