--- a/src/App.css
+++ b/src/App.css
@@ -13,6 +13,11 @@ body {
   margin : 0;
 }
 
+.logo-img {
+  width: 30%;
+  height: 30%;
+} 
+
 .logo {
   padding: 20px;
   width: 55%;
@@ -21,11 +26,10 @@ body {
   border-width: 1px;
   margin-left: auto;
   margin-right: auto;
-  
 }
 
 .icons {
-  padding : 20px;
+  padding : 0px 20px 20px 20px;
   width: 60%;
   margin-left: auto;
   margin-right: auto;
@@ -55,11 +59,11 @@ body {
   }
 
   .footer1 {
-    padding-top: 30px;
+    padding-top: 20px;
   }
 
   .footer2{
-    margin-top: 30px;
+    margin-top: 10px;
     padding-bottom : 10px;
     color: #49586B;
     font-size: 14px;
@@ -88,7 +92,7 @@ h2 {
 }
 
 .footer {
-  position:absolute;
+  position:relative;
   bottom:0;
   width:100%;
   height: 50px;
@@ -99,10 +103,9 @@ h2 {
   width: 60%;
   border-bottom-style: solid;
   border-color: #054979;
-  border-width: 2px;
+  border-width: 1px;
   margin-left: auto;
   margin-right: auto;
-  /* justify-content: center; */
 }
 
 .nav-list {
@@ -110,8 +113,8 @@ h2 {
   font-family: "Open Sans";
   font-weight: 400;
   list-style-type: none;
-  font-size: 20px;
-   padding: 20px;
+  font-size: 15px;
+   padding: 10px 30px;
 } 
 
 .selected {
@@ -119,8 +122,8 @@ h2 {
   font-family: "Open Sans";
   font-weight: 400;
   list-style-type: none;
-  font-size: 20px;
-  padding: 20px;
+  font-size: 15px;
+  padding: 10px 30px;
   background-color: #00a8ff;
   opacity: 60%;
 }
@@ -130,8 +133,14 @@ h2 {
   margin-bottom: 0;
   position: relative;
   display: flex;
+  justify-content: center;
 }
 
 .nav-links {
   text-decoration: none;
 } 
+
+.holder {
+  box-sizing: border-box;
+  height: 370px;
+}
