--- a/src/App.css
+++ b/src/App.css
@@ -59,11 +59,11 @@ body {
   }
 
   .footer1 {
-    padding-top: 20px;
+    padding-top: 10px;
   }
 
   .footer2{
-    margin-top: 10px;
+    margin-top: 10px; 
     padding-bottom : 10px;
     color: #49586B;
     font-size: 14px;
@@ -92,10 +92,9 @@ h2 {
 }
 
 .footer {
-  position:relative;
-  bottom:0;
+  position:absolute;
+  bottom: 0;
   width:100%;
-  height: 50px;
 }
 
 .navbar {
@@ -142,5 +141,73 @@ h2 {
 
 .holder {
   box-sizing: border-box;
-  height: 370px;
+  /* height: 370px; */
 }
+
+.buttons {
+  width: 20%;
+  margin-left: auto;
+  margin-right: auto;
+  display: flex;
+  position : relative;
+}
+
+.list-column {
+  width: 20%;
+  margin-left: auto;
+  margin-right: auto;
+  color: #ffffff;
+  font-family: "Open Sans";
+  font-weight: 400;
+  list-style-type: none;
+  font-size: 15px;
+  padding: 6px 0px;
+}
+
+.list-column:hover {
+  color: #ffffff;
+  font-family: "Open Sans";
+  font-weight: 400;
+  list-style-type: none;
+  font-size: 15px;
+  padding: 6px 0px;
+  background-color: #00a8ff;
+  opacity: 60%;
+}
+
+.left{
+  min-width: 120px;
+  height: 29px;
+  position: absolute;
+  left : 0;
+  background-color: #00a8ff;
+  opacity: 60%;
+  color: #ffffff;
+  font-family: "Open Sans";
+  font-weight: 400;
+  font-size: 15px;
+  border: 0;
+  outline: none;
+}
+
+.right{
+  min-width: 120px;
+  height: 29px;
+  position: absolute;
+  right: 0;
+  background-color: #00a8ff;
+  opacity: 60%;
+  color: #ffffff;
+  font-family: "Open Sans";
+  font-weight: 400;
+  font-size: 15px;
+  border: 0;
+  outline: none;
+}
+
+.ul-column {
+  padding: 0;
+  margin-left: auto;
+  margin-right: auto;
+}
+
