--- a/src/App.css
+++ b/src/App.css
@@ -212,3 +212,26 @@ h2 {
   margin-right: auto;
 }
 
+.li-details{
+  list-style-type: none;
+  color: #FFFFFF;
+  size: 22px;
+  padding: 20px 0px;
+}
+
+.span-details {
+  color:  #A5C1D3;
+}
+
+.div-details {
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 30px;
+  padding: 20px;
+  width: 30%;
+  height: 300px;
+  overflow: hidden;
+  overflow-y: scroll;
+  background-color: rgba(0,168,255,0.2)
+}
+
