--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,5 @@
 .app {
-  background-image: url(./images/background.png);
+  background-image: url(./Images/background.png);
   background-size: cover;
   background-position: center;
   text-align : center;
@@ -9,230 +9,12 @@
   overflow: auto;
 }
 
-body {
-  margin : 0;
-}
-
-.logo-img {
-  width: 30%;
-  height: 30%;
-} 
-
-.logo {
-  padding: 20px;
-  width: 55%;
-  border-bottom-color :#054979; 
-  border-bottom-style: solid;
-  border-width: 1px;
-  margin-left: auto;
-  margin-right: auto;
-}
-
-.icons {
-  padding : 0px 20px 20px 20px;
-  width: 60%;
-  margin-left: auto;
-  margin-right: auto;
-  display: grid;
-  grid-template-columns: repeat(3, auto);
-}
-
-.iconImg {
-   height: 130px;
-   width: 130px;
-   padding : 20px 20px 10px 20px;
-  }
-
-.iconName {
-  color: #FFFFFF;
-  font-size: 18px;
-  font-weight: 600;
-  text-align: center;
-}
-
-  .end {
-    font-size : 14px;
-    color: #1B6BA2 ;
-    margin-right: 20px;
-    margin-left: 20px;
-    text-decoration: none;
-  }
-
-  .footer1 {
-    padding-top: 10px;
-  }
-
-  .footer2{
-    margin-top: 10px; 
-    padding-bottom : 10px;
-    color: #49586B;
-    font-size: 14px;
-  }
-
-.endlogo {
-  vertical-align: middle;
-}
 
 
-.links {
-  text-decoration: none;
-}
 
-h2 {
-  font-size: 30px;
-  text-align : center;
-  color :aliceblue;
-}
 
-.border {
-  border-top: 1px solid #054979;
-  width: 60%;
-  margin : 0 auto;
-  text-align: center;
-}
 
-.footer {
-  position:absolute;
-  bottom: 0;
-  width:100%;
-}
 
-.navbar {
-  position: relative;
-  width: 60%;
-  border-bottom-style: solid;
-  border-color: #054979;
-  border-width: 1px;
-  margin-left: auto;
-  margin-right: auto;
-}
 
-.nav-list {
-  color: #ffffff;
-  font-family: "Open Sans";
-  font-weight: 400;
-  list-style-type: none;
-  font-size: 15px;
-   padding: 10px 30px;
-} 
-
-.selected {
-  color: #ffffff;
-  font-family: "Open Sans";
-  font-weight: 400;
-  list-style-type: none;
-  font-size: 15px;
-  padding: 10px 30px;
-  background-color: #00a8ff;
-  opacity: 60%;
-}
-
-.nav-ul {
-  margin-top: 0;
-  margin-bottom: 0;
-  position: relative;
-  display: flex;
-  justify-content: center;
-}
-
-.nav-links {
-  text-decoration: none;
-} 
-
-.holder {
-  box-sizing: border-box;
-  /* height: 370px; */
-}
-
-.buttons {
-  width: 20%;
-  margin-left: auto;
-  margin-right: auto;
-  display: flex;
-  position : relative;
-}
-
-.list-column {
-  width: 20%;
-  margin-left: auto;
-  margin-right: auto;
-  color: #ffffff;
-  font-family: "Open Sans";
-  font-weight: 400;
-  list-style-type: none;
-  font-size: 15px;
-  padding: 6px 0px;
-}
-
-.list-column:hover {
-  color: #ffffff;
-  font-family: "Open Sans";
-  font-weight: 400;
-  list-style-type: none;
-  font-size: 15px;
-  padding: 6px 0px;
-  background-color: #00a8ff;
-  opacity: 60%;
-}
-
-.left{
-  min-width: 120px;
-  height: 29px;
-  position: absolute;
-  left : 0;
-  background-color: #00a8ff;
-  opacity: 60%;
-  color: #ffffff;
-  font-family: "Open Sans";
-  font-weight: 400;
-  font-size: 15px;
-  border: 0;
-  outline: none;
-  bottom: 29;
-}
-
-.right{
-  min-width: 120px;
-  height: 29px;
-  position: absolute;
-  right: 0;
-  background-color: #00a8ff;
-  opacity: 60%;
-  color: #ffffff;
-  font-family: "Open Sans";
-  font-weight: 400;
-  font-size: 15px;
-  border: 0;
-  outline: none;
-}
-
-.ul-column {
-  padding: 0;
-  margin-left: auto;
-  margin-right: auto;
-}
-
-.li-details{
-  list-style-type: none;
-  color: #FFFFFF;
-  size: 22px;
-  padding: 20px 0px;
-}
-
-.span-details {
-  color:  #A5C1D3;
-}
-
-.div-details {
-  margin-left: auto;
-  margin-right: auto;
-  margin-top: 10px;
-  padding: 20px;
-  width: 30%;
-  height: 300px;
-  overflow: hidden;
-  overflow-y: scroll;
-  background-color: rgba(0,168,255,0.2)
-}
 
 
